--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p>Guessed letters: <span id="guessed-letters"></span></p>
     <p>Word: <span id="word"></span></p>
   </div>
+  <button id="btnReset">Reset</button>
   <script src="hangman.js" type="module"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
