Added higest score and fixed some bugs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>League of Legends Hangman</h1>
   <div class="score" id="score">Score: 0</div>
+  <div class="high-score" id="higest-score">Highest Score: 0</div>
   <div class="center2 ">
     <div>
         Guess the name of the champion!
