Probando input focus para mobile

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <div id="gameFinishedTEXT">
 
     </div>
+    <div class="mobile-input">
+      <input type="text" id="myInput">
+    </div>
 </div>
 
   <script src="hangman.js" type="module"></script>
